[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10.4"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.7.2"
clap = "3.1.18"
ctor = "0.1"
env_logger = "0.9.0"
log = "0.4.17"
risc0-zkvm = "0.12"
zk-poc-core = { path = "../core" }
zk-poc-methods = { path = "../methods" }
bincode = "1.3.3"
serde = "1.0.152"

[build-dependencies]
tonic-build = "0.7.2"
